--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
         <p>25200 Montbéliard</p>    
             
         <h4>Suivre l'IUT MMI</h4>
-        <img src="public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="#">
-        <img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="#">
-        <img src="public/icon/tinify-2022-11-16T10_17_52/instagram 1.webp" alt="#">
-        <img src="public/icon/tinify-2022-11-16T10_17_52/youtube 1.webp" alt="#">
-        <img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="#">
+        <a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="#"></a>
+        <a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="#"></a>
+        <a href="https://www.instagram.com/mmi_montbeliard/?hl=fr"><img src="public/icon/tinify-2022-11-16T10_17_52/instagram 1.webp" alt="#"></a>
+        <a href="https://www.youtube.com/channel/UCgW7jR8McJwjxPh0fDQaXGg/videos?app=desktop"><img src="public/icon/tinify-2022-11-16T10_17_52/youtube 1.webp" alt="#"></a>
+        <a href="https://www.twitch.tv/unifiedchampions"><img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="#"></a>
+        <a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="#"></a>
         <p>Mon e-mail personnel :</p>
         <p>sofiane.mouadeb.70000@gmail.com</p> 
         <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
