--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
         <h1>Denonciation du monde actuel</h1>
     </header>
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/image accueil.webp" alt="#">
