--- a/page_regret.html
+++ b/page_regret.html
@@ -30,5 +30,54 @@
         1.7 millions d’enfants sont sous-alimentés gravement. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="#">
+    <p>Image d’un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.</p>
+    <h3>La crise n’a rien arrangé</h3>
+    <p>
+        La crise du Covid 19 n’a fait qu’accroitre le nombre de personnes ayant un mauvais accès 
+        aux ressources alimentaires. Mais, les ressources halieutiques potables sont pour certains 
+        un luxe, ou ils n’en non pas accès facilement comme nous, avec par exemple les robinets.
+    </p>
+    <h3>Un mauvais accès à la nutrition et la gaspillage des Européens</h3>
+    <p>
+        Ils n'ont pas de l’eau avec abondance, il est même compliquer d’avoir un puit dans les villages. 
+        Et de même la sous-nutrition est liée la consommation d’eau non potable ou de l’eau de mauvaise 
+        qualité. A cause de cela, il y a de plus en plus de maladies et de contagions liées à l’eau non 
+        potable ou d’une médiocre qualité. Alors que dans les pays développés, il y a une surconsommation 
+        d’eau inconsidérables. Ces pays gaspillent des quantités titanesques d’eaux alors que beaucoup de 
+        pays en ont besoins pour boire principalement. Leur hygiènes n’est que secondaire, mais nous 
+        consommons plus qu’il n’en faut. Ils faut d’après moi répartir toute les ressources alimentaires 
+        que nous consommerons pas aux pays les plus démunies. Puis, arrêter de gâcher toute l’eau que nous 
+        utilisons pour ensuite, essayer de transférer de l’eau aux pays qui en ont le plus besoins. 
+        En essayant de trouver des stratégie pour y parvenir. 
+    </p>
+    <img src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="#">
+    <p>Dessin qui représente la planète qui est un robinet ouvert et que l’eau de planète disparait peu à peu. </p>
+
+
+    <footer>
+        <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
+        <h3>Site créé par Sofiane Mouadeb en classe de MMI Montbéliard</h3>
+        <h2>Menu</h2>
+        <p>Mention légale</p>
+        <p>Contact</p>    
+        <p>Contact</p> 
+        <p>4 Place Tharradin</p>
+        <p>25200 Montbéliard</p>    
+            
+        <h4>Suivre l'IUT MMI</h4>
+        <a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="#"></a>
+        <a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="#"></a>
+        <a href="https://www.instagram.com/mmi_montbeliard/?hl=fr"><img src="public/icon/tinify-2022-11-16T10_17_52/instagram 1.webp" alt="#"></a>
+        <a href="https://www.youtube.com/channel/UCgW7jR8McJwjxPh0fDQaXGg/videos?app=desktop"><img src="public/icon/tinify-2022-11-16T10_17_52/youtube 1.webp" alt="#"></a>
+        <a href="https://www.twitch.tv/unifiedchampions"><img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="#"></a>
+        <a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="#"></a>
+        <p>Mon e-mail personnel :</p>
+        <p>sofiane.mouadeb.70000@gmail.com</p> 
+        <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
+        <a href="http://mmimontbeliard.com/" target="_blank">dépatement MMI de Montbéliard</a></p>
+        <p>Université Nord Franche-Comté</p>
+        <a href="http://mmimontbeliard.com/" target="_blank">IUT MMI Montbéliard</a></p>
+        <img src="public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="#">
+    </footer>
 </body>
 </html>
