--- a/page_serie.html
+++ b/page_serie.html
@@ -11,62 +11,65 @@
     <h1>La Série qui résume tout</h1>
 <body>
     <p>
-        Nous allons voir pourquoi nous avons choisi ce lieu. L’Afrique Du Sud 
-        est le pays le plus inégalitaires du monde.
+        Nous allons voir ce que Oda insinu dans son oeuvre. Il fait pas mal d’allusions 
+        cachés ce qui fait son style intrigant et intéressant de l’oeuvre.
     </p>
-    <p> 
-        Afrique du Sud, le pays le plus inégalitaires au monde.
-    </p>
-    <h3>Description du lieu</h3>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" alt="#">
+    <p>Logo One Piece</p>
     <p>
-        Afrique du Sud est le pays le plus inégalitaire du monde. Ces inégalités
-        sont dues notamment par le manque d’aides sociales, d’aides médicales. 
-        Ils souffrent de cela bien avant la crise du Covid 19 donc cela s’empire 
-        de plus en plus de nos jours. La population est divisée en 2 parties, la 
-        population blanches et noires. La population blanche est la population la 
-        plus riche, ce sont les privilégiés. Il y a une répartition pas très équilibrés
-        des richesses dans la population totale de ce pays. En plus de cela, la crise a 
-        ccentuée le taux de chômage donc il y a plus de pauvreté dans le pays. 
+        One Piece à été choisi car il y a pas accès au même ressources et aussi les problèmes 
+        écologique à Wano. Il y a le racisme sur île des hommes poissons et sur l’île des Sabaody.
     </p>
-    <h3>Pour en savoir plus sur les sources de ces inégalités </h3>
+    <h3>Notre mode de vie néfaste</h3>
     <p>
-        Toute ces inégalités sont due à l’apartheid qui d’après moi persiste encore aujourd’hui, 
-        mais d’une autre manière. La population noire est dominante dans le pays ils détiennent 
-        70% de la richesse totale du pays alors qu’ils sont que 10% dans le pays sauf ceux qui 
-        sont chômage ne font pas partie de ce pourcentage. Le chômage est de 40% pour les sud-africains 
-        noirs et de 8% pour les sud-africains blancs, donc on peut encore ce sont les privilégié. 
-        La population blanche domine encore car ils gagnent trois plus que la population noire. 
-        Mais il y a aussi cela avec les femmes qui gagnent 30% moins que les hommes quelques soit 
-        leur statut sociale. 
+        Dans l’anime One Piece, on peut voir beaucoup de d’allusion selon notre mode de consommation 
+        c’est ce que l’on va voir aujourd’hui. Le producteur est Eiichirō Oda, il est aussi le mangaka 
+        du manga. On peut voir notamment dans l’arc Wano Kuni, pas mal de dénonciation concernant notre 
+        mode de vie et comment cela pourrais peut-être ce terminer. 
     </p>
-    <h3>Les faiblesses persistent</h3>
+    <h3>Scénario proche de la réalité</h3>
     <p>
-        Ce pays n’a toujours pas réussi à être une nation avec une grande cohésion. La population est 
-        divisée, n’a pas accès aux mêmes ressources. Les moyens pour contrer les événements climatiques 
-        sont très faibles qui augmente d’autant plus les inégalités de ce pays. Par exemple 63% d’eau est 
-        utilisé pour l’agriculture en Afrique du Sud. Il y a un manque d’accès à l’eau potable, beaucoup 
-        d’enfants meurent à cause du manque d’eau potable et donc des bactéries. Certains enfants sont 
-        hospitalisés et d’autres décèdent. L’éducation est aussi inégalitaire et très défaillant et donc 
-        cela ne cesse de croitre la pauvreté de ce pays déjà extrêmement inégalitaire. Les infrastructures 
-        liés à l’éducation sont délabrés, les taux de réussite sont fragiles, cela touche énormément 
-        d’établissement même s’il y a des établissement sécurisés cela reste faibles. La population est 
-        en sous-alimentation pour la population noire principalement et d’autres souffrent d’obésité car 
-        ils ont accès aux ressources pas saines, car trop cher et compliqué d’accès pour la majorité de 
-        la population du pays.
+        Dans cet arc, il y a pas mal d’inégalités car un pirate a envahi le pays et il contrôle tout, 
+        y compris le trafic d’armes, l’accès à la nourriture et l’eau. Dans le pays des Wa, le trafic 
+        d’arme monopolise beaucoup de l’économie du pays mais qui se font en lieu sûr pour que la 
+        population ne se doute de rien. Le pirate nommé Kaido, essais de faire naitre un régime 
+        autoritaire (il cherche l’obéissance de la population).
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="#">
-    <p>Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
+    <h3>Venons-en aux inégalités et à la pollution</h3>
+    <p>
+        Dans ce pays, la capitale est le centre des ressources alimentaires et d’accès à l’eau potable. 
+        Tous les individus vivant dans les autres villes n’ont pas accès aux même ressources que ceux de 
+        la capitale. Ils n’ont pas accès à la nourriture et un accès à l’eau potable. Les autres villages, 
+        prennent tous les déchets alimentaires de la capitale des Fleurs. Kaido, à mal industrialisé le pays 
+        car les opposants y travaillent, ce sont donc des esclaves. La pollution de l’air, de l’eau, des terres 
+        et de la nourriture se met vite en place. C’est donc pour cela qu’il y a d’énormes inégalités dans le 
+        pays et surtout dans tous les villages. L’agriculture est complexe dans le pays car les terres sont 
+        pollués donc impossible de faire des plantations. Les villages, mangent des poissons qui vivent 
+        dans les eaux pollués et donc la population souffrent beaucoup de maladie due au bactéries de 
+        l’alimentation et de l’eau. 
+    </p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="#">
+    <p>Image de pollution atmosphérique dans la série One Piece.</p>
+    <h3>La défense d’autres intérêts</h3>
+    <p>
+        Dans cette série, Oda défend beaucoup de chose. Il fait des allusions aux racismes avec les hommes 
+        poissons qui sont discriminé du fait de leur différences de peaux qui se situe à l’arc de l’île des
+        hommes poissons et aussi sur l’île des Sadonby. Sur l’île des Sabaody, on peut voir des privilégiés 
+        qui sont les dragons célestes. Ils utilisent les hommes poissons comme des esclaves, et même aucun 
+        humain ne doit lever la main ou mal parler a un dragons célestes sinon il se fait tuer sur le champ. 
+    </p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="#">
+    <p>Image de différents homme poisson de la série One Piece.</p>
     <h3>En conclusion</h3>
     <p>
-        On peut voir que la population est divisée en deux partie, d’un côté la population blanche et de 
-        l’autres les sud-africains noirs. Ils y a beaucoup d’inégalités entre ces deux ensemble, comme 
-        le mauvais accès à l’éducation, la répartition de richesse, les aides médicales, les aides sociales, 
-        le chômage, le genre au travail,…  Mais il y a la mauvaise répartitions des ressources en eau et 
-        alimentaire qui pour moi est la chose la plus importante car ils sont beaucoup à mourir de malnutrition 
-        et de maladies due aux bactéries lié à l’eau potable qui un compliqué d’accès pour différentes familles.
+        On peut voir que Eiichirō Oda déteste pollution et il est pour l’écologie. Cela coïncide avec mon 
+        livre sur la pollution. Oda est contre l’accès des répartitions de ressources alimentaires inégales. 
+        Il y beaucoup de problèmes écologiques. 
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="#">
-    <p>Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.</p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" alt="#">
+
+
+
 
     <footer>
         <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
