--- a/page_musique.html
+++ b/page_musique.html
@@ -11,62 +11,130 @@
     <h1>Une musique intéressantes</h1>
 <body>
     <p>
-        Nous allons voir pourquoi nous avons choisi ce lieu. L’Afrique Du Sud 
-        est le pays le plus inégalitaires du monde.
+        Avec ces paroles, l’artiste nous montre que monde est omnibuler par 
+        l’argent et la consommation. On peut peut-être parler même de consommation de masse.
     </p>
-    <p> 
-        Afrique du Sud, le pays le plus inégalitaires au monde.
-    </p>
-    <h3>Description du lieu</h3>
+    <h3>Les paroles de cette musique</h3>
+    <h4>Refrain</h4>
     <p>
-        Afrique du Sud est le pays le plus inégalitaire du monde. Ces inégalités
-        sont dues notamment par le manque d’aides sociales, d’aides médicales. 
-        Ils souffrent de cela bien avant la crise du Covid 19 donc cela s’empire 
-        de plus en plus de nos jours. La population est divisée en 2 parties, la 
-        population blanches et noires. La population blanche est la population la 
-        plus riche, ce sont les privilégiés. Il y a une répartition pas très équilibrés
-        des richesses dans la population totale de ce pays. En plus de cela, la crise a 
-        ccentuée le taux de chômage donc il y a plus de pauvreté dans le pays. 
+        Sale quand ma musique je la façonne
+        Ouais ouais pour la passion, mais j'le fais pour les tales/sommes
+        Ils m'disent tous : "C'est hela", des notifs sur mon tel
+        Business si t'appelles, parle business si t'appelles..
+        Sale quand ma musique je la façonne
+        Ouais ouais pour la passion, mais j'le fais pour les tales/sommes
+        Ils m'disent tous : "C'est hela", des notifs sur mon tel
+        Business si t'appelles, parle business si t'appelles..
     </p>
-    <h3>Pour en savoir plus sur les sources de ces inégalités </h3>
+    <h4>Le couplet</h4>
     <p>
-        Toute ces inégalités sont due à l’apartheid qui d’après moi persiste encore aujourd’hui, 
-        mais d’une autre manière. La population noire est dominante dans le pays ils détiennent 
-        70% de la richesse totale du pays alors qu’ils sont que 10% dans le pays sauf ceux qui 
-        sont chômage ne font pas partie de ce pourcentage. Le chômage est de 40% pour les sud-africains 
-        noirs et de 8% pour les sud-africains blancs, donc on peut encore ce sont les privilégié. 
-        La population blanche domine encore car ils gagnent trois plus que la population noire. 
-        Mais il y a aussi cela avec les femmes qui gagnent 30% moins que les hommes quelques soit 
-        leur statut sociale. 
+        Mon Dieu, j'me lève et j'suis gazé
+        Se faire du mal tous les jours, toi t'es maso'
+        Si l'condé m'aime pas, il va m'tazer c'est sur
+        Comment j'vais poser les bases ?
+        Envoie les mass', compter le cash
+        Un jour t'es fort, demain tu seras dépassé
+        Ti-peu, ça fait 21 que j'suis caché
+        Fuck, j'veux pas briller mais pécho les tales
+        Beaucoup de mal on se fait
+        Mami, j'attends que tu paies
+        Toi, tu vas monter, je sais
+        Personne, Personne va penser tes plaies
+        Rien à foutre, moi je bosses pour le lendemain
+        J'le fais pas pour un bag, pour un LV
+        Il m'faut la mer et la belle vue
+        Il m'faut la mer et la belle vie (yeah)
+        Envoie les mass', envoie les massa
+        Que je m'envole vraiment dans l'espace
+        Pour moi, c'est pas ça de gagner
+        Si tu vends tes gars, sale 'tasse
+        C'que tu fais c'est passable
+        Y a pas de frère, nous on se connait ap
+        Toi, tu vois pas les phares quand je trace (sa mère)
+        Qu'est-ce que tu m'as fais, j'me sens cassé
+        J'me sens cassé vraiment..
+        J'en peux plus de ces 'tasses (nan vraiment)
+        Fait face, fait pas le lâche, tu déranges
+        J'préfère les cuire j'aime pas quand c'est saignant
+        Pourquoi tu bégayes ? Avant tu faisais le mytho
+        Garçon tu sais que là t'es gênant
+        Et j'y pense on s'est pas qui t'es non ?
+        On s'est pas quitté non ?
+        Et je sais pas si c'est rentable
+        Je pense à toi, tu le rends
+        J'ai fais ce gouap pour mes rents-pa
+        J'ai pris la tour par les remparts
+        J'attends mon tour, je perds espoir..
+        Mais si ça perce, j'me refais 100x
+        Salope merci pour la renta', j'te remercie pour le moi d'en bas..
     </p>
-    <h3>Les faiblesses persistent</h3>
+    <h4>Refrain</h4>
     <p>
-        Ce pays n’a toujours pas réussi à être une nation avec une grande cohésion. La population est 
-        divisée, n’a pas accès aux mêmes ressources. Les moyens pour contrer les événements climatiques 
-        sont très faibles qui augmente d’autant plus les inégalités de ce pays. Par exemple 63% d’eau est 
-        utilisé pour l’agriculture en Afrique du Sud. Il y a un manque d’accès à l’eau potable, beaucoup 
-        d’enfants meurent à cause du manque d’eau potable et donc des bactéries. Certains enfants sont 
-        hospitalisés et d’autres décèdent. L’éducation est aussi inégalitaire et très défaillant et donc 
-        cela ne cesse de croitre la pauvreté de ce pays déjà extrêmement inégalitaire. Les infrastructures 
-        liés à l’éducation sont délabrés, les taux de réussite sont fragiles, cela touche énormément 
-        d’établissement même s’il y a des établissement sécurisés cela reste faibles. La population est 
-        en sous-alimentation pour la population noire principalement et d’autres souffrent d’obésité car 
-        ils ont accès aux ressources pas saines, car trop cher et compliqué d’accès pour la majorité de 
-        la population du pays.
+        Sale quand ma musique je la façonne
+        Ouais ouais pour la passion, mais j'le fait pour les tales/sommes
+        Ils m'disent tous : "C'est hela", des notifs sur mon tel
+        Business si t'appelles, parle business si t'appelles..
+        Sale quand ma musique je la façonne
+        Ouais ouais pour la passion, mais j'le fait pour les tales/sommes
+        Ils m'disent tous : "C'est hela", des notifs sur mon tel
+        Business si t'appelles, parle business si t'appelles..
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="#">
-    <p>Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
-    <h3>En conclusion</h3>
+    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip sky.webp" alt="#">
+    <p>Image d'une scène du clip Sky de Hakai</p>
+    
+    <h3>Écouter la musique</h3>
+    <img src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="#">
+
+    <h3>Ce qu’il resort de la musique</h3>
     <p>
-        On peut voir que la population est divisée en deux partie, d’un côté la population blanche et de 
-        l’autres les sud-africains noirs. Ils y a beaucoup d’inégalités entre ces deux ensemble, comme 
-        le mauvais accès à l’éducation, la répartition de richesse, les aides médicales, les aides sociales, 
-        le chômage, le genre au travail,…  Mais il y a la mauvaise répartitions des ressources en eau et 
-        alimentaire qui pour moi est la chose la plus importante car ils sont beaucoup à mourir de malnutrition 
-        et de maladies due aux bactéries lié à l’eau potable qui un compliqué d’accès pour différentes familles.
+        Avec ces paroles, l’artiste nous montre que monde est omnibuler par l’argent et la 
+        consommation on peut peut-être parler de la consommation de masse. 
+        Il y a un emprisonnement de la personne sur son téléphone avec les notifications et il est 
+        aussi un outils de travail car ces notifs montre aussi son avancement dans son bisness, les 
+        personnes ne l’appel que pour le bisness et donc pour gagner de l’argent qui montre la consommation de masse.
+        Il y a donc une petite de passion dans ces musiques mais son objectifs premiers c’est de gagner un maximum d’argents 
+        et qu’il fait de la musique plus pour consommer et gagner beaucoup.
+        Les gens l’envie avec les notifications qu’il reçoit car c’est l’argent qui vient a lui en quelque sorte. 
+        Ces notifications parle que du business les personnes ne se soucie que de l’argent et non pas de sa personne.
+        Cela montre qu’il a des personnes marre de travailler pour gagnés leur argent quotidiennement. Il montre que les 
+        personnes aiment en quelque sorte ce faire du mal d’où le mot maso’ qui veut dire masochiste. Cela montre qu’il 
+        commence à travailler lorsqu’il sait le montant qu’il gagnera avant de s’y mettre.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="#">
-    <p>Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.</p>
+    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="#">
+    <p>Image de l'artiste Hakai dans avec une ambiance de rouge sombre et de noir.</p>
+    <p>    
+        Il nous montre que la tendance ne fais que de changer et très rapidement. Elle peut changer du jour au lendemain.
+        Un jour tu auras la gloire et du jour au lendemain tous peut s’effondrer.
+        Il veut dire que quand tu seras au plus bas personne sera la viendra t’aider, que cela soit mentalement ou même physiquement.
+        Il ne travaille pas pour consommer des produits mais plutôt à voyager à des endroits paradisiaque.
+        D’après lui les traites qui gagnent de l’argent derrière le dos de leur "amis" sont vraiment ignoble mentalement
+        car tu peux penser que cette personne peut être proches de toi mais ce n’est pas le cas.
+        Cela montre qu’il a vécu avec un traitre qui nous a montré précédemment et qu’il en a marre de se faire trahir
+        par des proches et vu qu’il est vulgaire cela nous accentue son mécontentement par ce type d’actions qu’il déteste.
+        Ensuite, il veut que les traites assument et qu’il arrête de chercher des excuses.
+        Il parle a un traitre, il essais de l’intimidé. Il lui dit pourquoi faire comme si tu n’ as rien a fait alors que tu es
+        le coupable. Et en plus de cela il revient comme si de rien n’était comme s’il était encore son amis.
+        Il ne sait encore s’il y recevra du profit mais il essais ce travaille pour que ces parents se sentent bien et qu’ils
+        peuvent s’offrir tous ce qu’ils veulent.
+    </p>  
+    <h3>Pour conclure sur la musique</h3>
+    <p>
+        On peut voir que le monde est omnibulé par l’argent. Chaque personne veut toujours plus que ce qu’il a 
+        déjà que cela soit pour consommer ou gagner de l’argent. On a vu aussi que le téléphone est un centre 
+        d’intérêt de quasiment toute les personnes. Les personnes deviennent accros à leur téléphone 
+        et l’utilisent aussi comme outils de travail.  On peut voir aussi que les personnes aiment se faire du mal, 
+        ici se lever pour un travail qu’il affectionne pas. On voit aussi de pas mal de personnes qui change complètement 
+        avec le temps. Mais le principal thème de la musique c’est l’argent et en quelque sorte le monde est contrôler par 
+        l’argent. Le monde ne fonctionne qu’avec cela et si tu n’en a pas assez c’est compliquer de vivre, que cela soit 
+        alimentairement ou même en se faisant plaisir en consommant c’est donc quasiment impossible de survivre si tu n’en a pas. 
+    </p>
+    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="#">
+    <p>Photo d'une scène du clip Lune de Hakai</p>
+
+    <p>
+        Son dernier album ce nomme “Akuma”, il est un succès pour les auditeurs qui écoutent ce type de musiques qui sont 
+        spéciales, elles se propagent et se développent de plus en plus.
+    </p>
 
     <footer>
         <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
