--- a/page_serie.html
+++ b/page_serie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Lieu</title>
+    <title>Page Série</title>
 </head>
 <header>
     <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
@@ -60,16 +60,27 @@
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="#">
     <p>Image de différents homme poisson de la série One Piece.</p>
-    <h3>En conclusion</h3>
+    <h3>En conclusion de cette article</h3>
     <p>
         On peut voir que Eiichirō Oda déteste pollution et il est pour l’écologie. Cela coïncide avec mon 
         livre sur la pollution. Oda est contre l’accès des répartitions de ressources alimentaires inégales. 
         Il y beaucoup de problèmes écologiques. 
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" alt="#">
-
-
-
+    <p>Logo de l’équipage principal de One Piece, appelè les chapeaux de paille.</p>
+    <h3>Nous allons voir maintenant la filmographie de Eiichirō Oda</h3>
+    <p>
+        Eiichirō Oda, n’a fait que One Piece durant sa carrière qui continue car la série n’est pas achevée. 
+        Il ne ressortira plus rien après One Piece, d’après lui car il consacre toute sa vie et cela fait 
+        plus de 23 ans qu’il publie chaque semaine 1 épisode. Mais, il a publié des films les voici.
+    </p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" alt="#">
+    <p>Couverture des 4 films les plus vendu de Oda.</p>
+    <h3>Regarder le premier épisode de One Piece</h3>
+    <img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#">
 
     <footer>
         <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
