--- a/autres_projets.html
+++ b/autres_projets.html
@@ -7,7 +7,7 @@
     <title>Page Autres Projets</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
     <h1>Autres projets</h1>
     <p>Vous d'autres articles qui vous intéresseront sûrement.</p>
     <p> French Football all time.            ( Crée par Yassir )
