--- a/glossaire.html
+++ b/glossaire.html
@@ -7,7 +7,7 @@
     <title>Page Glossaire</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
     <h1>Glossaire</h1>
     <p>
         <h4>Atmosphère :</h4> On appelle « atmosphère » l'enveloppe gazeuse qui entoure certains corps célestes comme, 
