--- a/page_lieu.html
+++ b/page_lieu.html
@@ -7,7 +7,7 @@
     <title>Page Lieu</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
     <h1>Le lieu le plus inégalitaire du monde</h1>
 <body>
     <p>
