--- a/glossary.html
+++ b/glossary.html
@@ -7,7 +7,7 @@
     <title>Page Glossary</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
     <h1>Glossary</h1>
     <p>
         <h4>Atmosphere :</h4> The gaseous envelope surrounding certain celestial bodies such as the Earth, 
