--- a/page_espoir.html
+++ b/page_espoir.html
@@ -7,7 +7,7 @@
     <title>Page Espoir</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
     <h1>Un grand espoirs de ce monde</h1>
 <body>
     <p>
