--- a/page_serie.html
+++ b/page_serie.html
@@ -7,7 +7,7 @@
     <title>Page Série</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#">
     <h1>La Série qui résume tout</h1>
 <body>
     <p>
@@ -67,7 +67,7 @@
         Il y beaucoup de problèmes écologiques. 
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" alt="#">
-    <p>Logo de l’équipage principal de One Piece, appelè les chapeaux de paille.</p>
+    <p>Logo de l’équipage principal de One Piece, nommé les chapeaux de paille.</p>
     <h3>Nous allons voir maintenant la filmographie de Eiichirō Oda</h3>
     <p>
         Eiichirō Oda, n’a fait que One Piece durant sa carrière qui continue car la série n’est pas achevée. 
