--- a/à_propos.html
+++ b/à_propos.html
@@ -7,7 +7,7 @@
     <title>Page à propos</title>
 </head>
 <header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/W_RLD-removebg-preview (1) 1.webp" alt="#">
+    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#">
     <h1>À propos</h1>
     <p>
         Le thème que j’ai choisi est fondé sur mon article sur One Piece car tous mes 
