--- a/indexGB.html
+++ b/indexGB.html
@@ -5,12 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <header>
         <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#">
-        <h1>Denunciation of the current world</h1>
+        <nav>
+            <ul>
+              <li><a href="./music.html">An interesting music</a></li>
+              <li><a href="./book.html">The book for the environment</a></li>
+              <li><a href="./series.html">The series that sums it all up</a></li>
+              <li><a href="./place.html">Most unequal place in the world</a></li>
+              <li><a href="./hopes.html">A great hope for the world</a></li>
+              <li><a href="./regrets.html">A regret of this generation</a></li>
+              <li><a href="./other_project.html">Other project</a></li>
+              <li><a href="./glossary.html">Glossary</a></li>
+              <li><a href="./about_me.html">About me</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#"><img src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="#"></a></li>
+              <li><a href="#"><img src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="#"></a></li>
+            </ul>
+        </nav>
     </header>
+    <h1>Denunciation of the current world</h1>
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/image accueil.webp" alt="#">
         <p>
             Here are the different articles which all coincide on one and the same theme, the distresses of the 
@@ -27,6 +44,7 @@
             Content of the article: With these lyrics, the artist shows us that the world is obnibulated 
             by money and consumption. Perhaps we can even talk about mass consumption. 
         </p> 
+            <a href="./music.html">Learn more</a>
             <button>Learn more</button>
 
 
@@ -37,6 +55,7 @@
             Content of the article: We will see what APPA tells us about air pollution. But as the book dates from 
             1998, we will see the trends from that time and compare them with the current trends.
         </p> 
+            <a href="./book.html">Learn more</a>
             <button>Learn more</button>
 
 
@@ -47,6 +66,7 @@
             Content of the article: We'll see what Oda is up to in his work. He makes a lot of hidden allusions 
             which makes his style intriguing and interesting.
         </p> 
+            <a href="./series.html">Learn more</a>
             <button>Learn more</button>
 
 
@@ -57,6 +77,7 @@
         Content of the article: We will see why we chose this place. South Africa is the most insecure country 
         in the world.
     </p>
+        <a href="./place.html">Learn more</a>
         <button>Learn more</button>
 
 
@@ -68,6 +89,7 @@
         Content of the article: We are going to enumerate a lot of systems to help the poor. In particular with the 
         associations or even the kitty.
     </p>
+        <a href="./hopes.html">Learn more</a>
         <button>Learn more</button>
 
 
@@ -79,6 +101,7 @@
         Content of the article: We will list a lot of inequalities in the world. With the poor access to water and 
         food in the world.
     </p>
+        <a href="./regrets.html">Learn more</a>
         <button>Learn more</button>
 
 
@@ -100,7 +123,7 @@
         <a href="https://www.twitch.tv/unifiedchampions"><img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="#"></a>
         <a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="#"></a>
         <p>My mail personal :</p>
-        <p>sofiane.mouadeb.70000@gmail.com</p> 
+        <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" target="_blank">sofiane.mouadeb.70000@gmail.com</a> 
         <p>This project was carried out as part of an educational exercise at 
         <a href="http://mmimontbeliard.com/" target="_blank">the MMI department in Montbéliard.</a></p>
         <p>University Nord Franche-Comté</p>
