--- a/index.html
+++ b/index.html
@@ -32,37 +32,28 @@
 <body>
     <header>
         <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#">
-        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class = "header_menu">menu</button>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class = "header_menu"><img src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="#"></button>
         <h1>menu</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-              <li><a href="#">item 1</a></li>
-              <li><a href="#">item 2</a></li>
-              <li><a href="#">item 3</a></li>
+                <li><a href="./page_musique.html">Une musique interessante</a></li>
+                <li><a href="./page_livre.html">Le livre pour l’environnement</a></li>
+                <li><a href="./page_serie.html">La Série qui résume tout</a></li>
+                <li><a href="./page_lieu.html">le lieu le plus inégalitaire du monde</a></li>
+                <li><a href="./page_espoir.html">Un grand Espoirs de ce monde</a></li>
+                <li><a href="./page_regret.html">Un Regret de cette génération</a></li>
+                <li><a href="./autres_projets.html">Autres Projets</a></li>
             </ul>
-        </nav>
-        <div x-data="{ expanded: false }">
-            <button @click="expanded = ! expanded"><img src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="#"></button>
-         
-            <p x-show="expanded" x-collapse>
-                <ul>
-                    <li><a href="./page_musique.html">Une musique interessante</a></li>
-                    <li><a href="./page_livre.html">Le livre pour l’environnement</a></li>
-                    <li><a href="./page_serie.html">La Série qui résume tout</a></li>
-                    <li><a href="./page_lieu.html">le lieu le plus inégalitaire du monde</a></li>
-                    <li><a href="./page_espoir.html">Un grand Espoirs de ce monde</a></li>
-                    <li><a href="./page_regret.html">Un Regret de cette génération</a></li>
-                    <li><a href="./autres_projets.html">Autres Projets</a></li>
-                </ul>
-                <ul>
-                    <li><a href="./glossaire.html">Glossaire</a></li>
-                    <li><a href="./à_propos.html">À propos</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
+            <ul>
+                <li><a href="./glossaire.html">Glossaire</a></li>
+                <li><a href="./à_propos.html">À propos</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <ul>
+                <li><a href=""><img src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="#"></a></li>
+                <li><a href=""><img src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="#"></a></li>
+            </ul>
+        </nav>         
     </header>
     <h1>Denonciation du monde actuel</h1>
     <img class="image_accueil" src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/image accueil.webp" alt="#">
