--- a/other_project.html
+++ b/other_project.html
@@ -6,32 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Other Projects</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script defer src="https://unpkg.com/alpinejs%22%3E"></script>
+    <style>
+        .menu {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: #fff;
+            display: grid;
+            place-content: center;
+        }
+        .header_menuBtn {
+            position: relative;
+            z-index: 10;
+        }
+          .noscroll,
+          .noscroll body {
+            overflow: hidden;
+        }
+    </style>
 </head>
-<header>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#">
-    <div x-data="{ expanded: false }">
-        <button @click="expanded = ! expanded"><img src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt=""></button>
-     
-        <p x-show="expanded" x-collapse>
+<body>
+    <header>
+        <a href="./indexGB.html"><img src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#"></a>
+        <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class = "header_menu"><img src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="#"></button>
+        <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="./page_musique.html">Une musique interessante</a></li>
-                <li><a href="./page_livre.html">Le livre pour l’environnement</a></li>
-                <li><a href="./page_serie.html">La Série qui résume tout</a></li>
-                <li><a href="./page_lieu.html">le lieu le plus inégalitaire du monde</a></li>
-                <li><a href="./page_espoir.html">Un grand Espoirs de ce monde</a></li>
-                <li><a href="./page_regret.html">Un Regret de cette génération</a></li>
-                <li><a href="./autres_projets.html">Autres Projets</a></li>
+                <a href="./indexGB.html"><img src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#"></a>
             </ul>
             <ul>
-                <li><a href="./glossaire.html">Glossaire</a></li>
-                <li><a href="./à_propos.html">À propos</a></li>
+                <h1>Menu</h1>
+            </ul>
+            <ul>
+                <li><a href="./music.html">An interesting music</a></li>
+                <li><a href="./book.html">The book for the environment</a></li>
+                <li><a href="./series.html">The series that sums it all up</a></li>
+                <li><a href="./place.html">Most unequal place in the world</a></li>
+                <li><a href="./hopes.html">A great hope for the world</a></li>
+                <li><a href="./regrets.html">A regret of this generation</a></li>
+                <li><a href="./other_project.html">Other project</a></li>
+            </ul>
+            <ul> 
+                <li><a href="./glossary.html">Glossary</a></li>
+                <li><a href="./about_me.html">About me</a></li>
                 <li><a href="#">Contact</a></li>
-            </ul>
+            </ul> 
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="./index.html"><img src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="#"></a></li>
+                <li><a href="./indexGB.html"><img src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="#"></a></li>
             </ul>
-</header>
+   </header>
     <h1>Other projects</h1>
     <p>Here are some other articles that you may find interesting.</p>
     <p> French Football all time.            ( Created by Yassir )
